fix style and err check

--- a/src/static/css/site.css
+++ b/src/static/css/site.css
@@ -31,7 +31,7 @@ ul{list-style:none;}
 ul,li,p{margin:0;padding:0}
 .dot{background-color:#f43531;border-radius:50%;position:absolute;z-index:2;}
 .stage{position:absolute;top:0;left:0;right:0;bottom:0;z-index:10;background-color:#F1F0F6;}
-.icon{display:inline-block;width:16px;height:16px;background-repeat:no-repeat;background-size:100% 100%;}
+.icon{display:inline-block;background-size:contain;background-position:center;background-repeat:no-repeat;}
 .gray{color:#B1B5B9}
 /*slideup*/
 .slide-up-enter-active{transition:all .1s ease}
