--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,11 +1,10 @@
 .gray{color:#B1B5B9}
-.icon{display:inline-block;background-size:contain;background-position:center;background-repeat:no-repeat;}
 /*icon*/
 .icon-arrow-right{background-image:url('./views/common/arrow-right@2x.png');
 width:15px;height:23px;}
 .icon-limit{background-image:url('./views/common/limit@2x.png');
-        width:135px;height:40px;color:#fff;padding-left:23px;
-        font-size:dpr(22px);
+        color:#fff;
+        font-size:dpr(22px);padding-left:19px;padding-right:10px;
 }
 .line{background:#dfdfdf;height:1px;width:50px;display:inline-block;}
 .text-info{height:80px;width:100%;line-height:80px;color:#cbcbcb;text-align:center;
@@ -15,3 +14,4 @@ width:15px;height:23px;}
 }
 .c-yellow{color:#ffa200}
 .c-orange{color:#f46200}
+img{background-image:url('./views/common/c-bg.jpg')}
