add detail page

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -14,4 +14,4 @@ width:15px;height:23px;}
 }
 .c-yellow{color:#ffa200}
 .c-orange{color:#f46200}
-img{background-image:url('./views/common/c-bg.jpg')}
+/*img{background-image:url('./views/common/c-bg.jpg')}*/
