--- a/src/static/css/quick-layout.css
+++ b/src/static/css/quick-layout.css
@@ -175,6 +175,7 @@ a:hover { text-decoration: underline; }
 .mt20 { margin-top: 20px; }
 .mt30 { margin-top: 30px; }
 .mt40 {margin-top:40px;}
+.mt50 {margin-top:50px;}
 .mb1 { margin-bottom: 1px; }
 .mb2 { margin-bottom: 2px; }
 .mb5 { margin-bottom: 5px; }
