font-size use rem

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -4,12 +4,12 @@
 width:15px;height:23px;}
 .icon-limit{background-image:url('./views/common/limit@2x.png');
         color:#fff;
-        font-size:dpr(22px);padding-left:19px;padding-right:10px;
+        font-size:22px;padding-left:19px;padding-right:10px;
 }
 .line{background:#dfdfdf;height:1px;width:50px;display:inline-block;}
 .text-info{height:80px;width:100%;line-height:80px;color:#cbcbcb;text-align:center;
         letter-spacing:5px;
-        font-size:dpr(24px);
+        font-size:24px;
         *{vertical-align:middle;}
 }
 .c-yellow{color:#ffa200}
